# utag

./: .gitignore  LICENSE  README.md
build-utag-Desktop_Qt_5_15_1_MinGW_32_bit-Debug/: .ninja_deps  .ninja_log  build.ninja
build-utag-Desktop_Qt_5_15_1_MinGW_32_bit-Debug/.cmake/api/v1/reply/: cache-v2-572023126ad4f84f786c.json  cmakeFiles-v1-8be94734dc4541ca421e.json  codemodel-v2-8d50c7d44de0cef29ca8.json  index-2020-10-14T12-53-08-0287.json  target-docs-Debug-895d50990179b88db78e.json  target-src_lib-Debug-e78bf7f29f70aecb30ff.json  target-src_lib_autogen-Debug-b7cafa1cd24ffdf910d8.json  target-src_lib_autogen_timestamp_deps-Debug-f1165a2ab1ab0be2c2ca.json  target-tag-Debug-990bbb5fb568c4b9f4e1.json  target-tag_c-Debug-fd928055bc6277005d7b.json  target-uninstall-Debug-646f96ebc7130d3df9b6.json  target-utag-Debug-b9f5d5a9d16fa528ea5d.json  target-utag_autogen-Debug-0a913d62599fe9b4f8e2.json  target-utag_autogen_timestamp_deps-Debug-6e39fcee3c816f167388.json
build-utag-Desktop_Qt_5_15_1_MinGW_32_bit-Debug/3dparty/taglib/: Doxyfile  cmake_uninstall.cmake  config.h  taglib-config.cmd  taglib.pc
build-utag-Desktop_Qt_5_15_1_MinGW_32_bit-Debug/3dparty/taglib/bindings/c/: taglib_c.pc
build-utag-Desktop_Qt_5_15_1_MinGW_32_bit-Debug/app/src/src_lib_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-utag-Desktop_Qt_5_15_1_MinGW_32_bit-Debug/app/src/src_lib_autogen/2Z23TPPRUJ/: moc_TagEditor.cpp
build-utag-Desktop_Qt_5_15_1_MinGW_32_bit-Debug/app/utag_autogen/: deps
utag/: CMakeLists.txt  utag
utag/3dparty/: CMakeLists.txt
utag/3dparty/taglib/: CMakeLists.txt
utag/3dparty/taglib/taglib/: fileref.h
utag/3dparty/taglib/taglib/asf/: asfpicture.h
utag/3dparty/taglib/taglib/mpeg/id3v2/: id3v2frame.cpp
utag/3dparty/taglib/taglib/mpeg/id3v2/frames/: attachedpictureframe.h
utag/3dparty/taglib/tests/data/: tagged.wv
utag/app/: CMakeLists.txt  main.cpp
utag/app/src/: CMakeLists.txt  MiscHeaders.h  MyHeaders.h  TagEditor.cpp  TagEditor.h  dummy.cpp  qtTest.cpp
utag/app/src/AudioFile/: AudioFile.cpp  AudioFile.h
utag/app/src/TagEditor/: TagEditor.cpp  TagEditor.h  createButtons.cpp  createLayouts.cpp  createTreeView.cpp  eventOpenFileFromTable.cpp  eventSaveTagButton.cpp  eventTreeDoubleClick.cpp  openFileOfItem.cpp
utag/app/src/parse/: AudioFileFilter.cpp
utag/resources/: app_win32.rc  myres.qrc  utag_icon.icns
utag/taglib/: ConfigureChecks.cmake
utag/taglib/taglib/toolkit/: taglib.h  trefcounter.cpp  trefcounter.h
